# appointment-system

campus-forum/: pom.xml
campus-forum/src/main/java/com/yihe/campus/forum/: CampusForumApplication.java
campus-forum/src/main/java/com/yihe/campus/forum/config/: AppConfig.java  RestTemplateConfig.java
campus-forum/src/main/java/com/yihe/campus/forum/utils/: JwtUtils.java  WxDecryptUtil.java
campus-forum/src/main/resources/: application.yaml  logback-spring.xml
yuyue_manage/: CMakeLists.txt  computerRoom.cpp  computerRoom.h  globalFile.h  identity.h  main.cpp  manager.cpp  manager.h  orderFile.cpp  orderFile.h  student.cpp  student.h  teacher.cpp  teacher.h
